# cookiecutter-django-postgres-redis-celery

./: Makefile  README.md  cookiecutter.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  tasks.yml
tests/: test_cookiecutter.py
{{ cookiecutter.project_name }}/: .env  Makefile  README.md  docker-compose.yml  {{ '' }}.gitignore
{{ cookiecutter.project_name }}/app/: Dockerfile
{{ cookiecutter.project_name }}/app/requirements/: dev.txt  production.txt
{{ cookiecutter.project_name }}/app/settings/: staging.py  testing.py
{{ cookiecutter.project_name }}/app/{{ cookiecutter.project_name }}/common/: test.py
{{ cookiecutter.project_name }}/app/{{ cookiecutter.project_name }}/common/management/commands/: runcelery.py
{{ cookiecutter.project_name }}/webapp/: Dockerfile  production.Dockerfile  pyproject.toml
{{ cookiecutter.project_name }}/webapp/entrypoints/: runcelery.sh  runcelerybeat.sh  runserver.sh  test.sh
{{ cookiecutter.project_name }}/webapp/entrypoints/production/: migrate.sh  runcelery.sh  runcelerybeat.sh  runserver.sh
{{ cookiecutter.project_name }}/webapp/requirements/: production.txt
{{ cookiecutter.project_name }}/webapp/settings/: dev.py
{{ cookiecutter.project_name }}/webapp/{{ cookiecutter.project_name }}/celery/: celery.py
{{ cookiecutter.project_name }}/webapp/{{ cookiecutter.project_name }}/common/management/commands/: runcelerybeat.py
{{ cookiecutter.project_name }}/webapp/{{ cookiecutter.project_name }}/common/templates/: default_urlconf.html
{{ cookiecutter.project_slug }}/: .env  Makefile  docker-compose.yml
{{ cookiecutter.project_slug }}/app/settings/: dev.py  production.py
{{ cookiecutter.project_slug }}/app/{{ cookiecutter.project_name }}/: urls.py  wsgi.py
{{ cookiecutter.project_slug }}/app/{{ cookiecutter.project_name }}/common/management/commands/: runcelery.py  runcelerybeat.py
