[tool.poetry]
name = "cookiecutter-django-postgres-redis-celery"
version = "0.1.0"
description = "Django/PostgreSQL/Redis/Celery in Docker cookiecutter"
authors = ["Michal Nakoneczny"]

[tool.poetry.dependencies]
python = "3.10.0"
pytest = "^6.2.5"
cookiecutter = "^1.7.3"
pytest-timeout = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
