[project]
name = "cookiecutter-django-postgres-redis-celery"
version = "1.0.2"
description = "Django/PostgreSQL/Redis/Celery in Docker cookiecutter"
authors = [
    {name = "Michal Nakoneczny", email = "michal@nakoneczny.pl"},
]
dependencies = [
    "cookiecutter==2.1.1",
]
requires-python = ">=3.7"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest==7.2.1",
    "pytest-timeout==2.1.0",
]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
