[project]
name = "{{ cookiecutter.project_name }}"
version = "0.0.1"
description = ""
authors = [
    {name = "Michal Nakoneczny", email = "michal@nakoneczny.pl"},
]
dependencies = [
    "django==4.2.2",
    "celery==5.3.1",
    "django-celery-beat==2.5.0",
    "gunicorn==20.1.0",
    "kombu==5.3.1",
    "psycopg2==2.9.6",
    "redis==4.5.5",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
dev = [
    "black==23.3.0",
    "mypy==1.4.0",
    "pytest-cov==4.1.0",
    "pytest==7.4.0",
]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.mypy]
files = "{{ cookiecutter.project_name }}/**/*.py,tests/**/*.py"
exclude = "__pypackages__/"
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.coverage.run]
data_file = "/tmp/.{{ cookiecutter.project_name }}.coverage"
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 92
