[project]
name = "{{ cookiecutter.project_name }}"
version = "0.0.1"
description = ""
authors = [
    {name = "Michal Nakoneczny", email = "michal@nakoneczny.pl"},
]
dependencies = [
    "django==5.0.6",
    "celery==5.4.0",
    "django-celery-beat==2.6.0",
    "gunicorn==22.0.0",
    "kombu==5.3.7",
    "psycopg2==2.9.8",
    "redis==5.0.7",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "mypy==1.10.1",
    "pytest-cov==5.0.0",
    "pytest==8.2.2",
]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.mypy]
files = "{{ cookiecutter.project_name }}/**/*.py,tests/**/*.py"
exclude = "__pypackages__/"
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.coverage.run]
data_file = "/tmp/.{{ cookiecutter.project_name }}.coverage"
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 92

[tool.pdm]
